--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
 
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <title>Responsive Portfolio</title>
 
-    <link rel="icon" href="assets/img/u-logo.png" type="image/x-icon">
+    <link rel="icon" href="images/u-logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -105,7 +105,7 @@
         165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
         129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
-                                <image class="home__blob-img" x="12" xlink:href="assets/img/utsobe.png" />
+                                <image class="home__blob-img" x="12" xlink:href="images/utsobe.png" />
                             </g>
                         </svg>
                     </div>
@@ -114,7 +114,7 @@
                         <h3 class="home__subtitle">Frontend Developer</h3>
                         <p class="home__description">High level experience in Mobile & Web Application Development and knowledge, producing
                             quality work.</p>
-                        <a download="" href="assets/pdf/Md Mehedi Hasan Utsobe (Senior Frontend Developer).pdf"
+                        <a download="" href="images/Md Mehedi Hasan Utsobe (Senior Frontend Developer).pdf"
                             class="button button--flex">
                             Resume <i class="uil uil-download-alt button__icon"></i>
                         </a>
@@ -137,7 +137,7 @@
             <span class="section__subtitle">My introduction</span>
 
             <div class="about__container container grid">
-                <img src="assets/img/utsobe-img-2.jpeg" alt="" class="about__img">
+                <img src="images/utsobe-img-2.jpeg" alt="" class="about__img">
 
                 <div class="about__data">
                     <p class="about__description">Mobile & Web Application Developer, with extensive knowledge and highly passionate,
@@ -664,7 +664,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/bmi_calculator.png" alt="" class="portfolio__img">
+                        <img src="images/bmi_calculator.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BMI Calculator</h3>
@@ -685,7 +685,7 @@
                     </div>
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/bookshelf.png" alt="" class="portfolio__img">
+                        <img src="images/bookshelf.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BookShelf</h3>
@@ -711,7 +711,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/quizzler.png" alt="" class="portfolio__img">
+                        <img src="images/quizzler.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Quizzler</h3>
@@ -732,7 +732,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/xylophone.png" alt="" class="portfolio__img">
+                        <img src="images/xylophone.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Xylophone</h3>
@@ -753,7 +753,7 @@
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/destini.png" alt="" class="portfolio__img">
+                        <img src="images/destini.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Destini</h3>
@@ -774,7 +774,7 @@
                     </div>
                     <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/project-1.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Native Tools</h3>
@@ -803,7 +803,7 @@
 
                     <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/project-3.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-3.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Car Ghoor</h3>
@@ -832,7 +832,7 @@
 
                     <!--==================== PORTFOLIO 7 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/project-2.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">The Fitness Folk</h3>
@@ -880,7 +880,7 @@
                         </a>
                     </div>
 
-                    <img src="assets/img/project-animy.png" alt="" class="project__img">
+                    <img src="images/project-animy.png" alt="" class="project__img">
                 </div>
             </div>
         </section>
@@ -896,7 +896,7 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                <img src="images/testimonial1.jpg" alt="" class="testimonial__img">
 
                                 <div>
                                     <h3 class="testimonial__name">Sara Smith</h3>
@@ -921,7 +921,7 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+                                <img src="images/testimonial2.jpg" alt="" class="testimonial__img">
 
                                 <div>
                                     <h3 class="testimonial__name">Matt Robinson</h3>
@@ -946,7 +946,7 @@
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+                                <img src="images/testimonial3.jpg" alt="" class="testimonial__img">
 
                                 <div>
                                     <h3 class="testimonial__name">Raul Harris</h3>
@@ -1089,10 +1089,10 @@
 
 
     <!--==================== SWIPER JS ====================-->
-    <script src="js/swiper-bundle.min.js"></script>
+    <script src="swiper-bundle.min.js"></script>
 
-    <!--==================== MAIN JS ====================-->
-    <script src="js/main.js"></script>
+    <!--==================== SCRIPT JS ====================-->
+    <script src="script.js"></script>
 </body>
 
 </html>
