--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--==================== UNICONS ====================-->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
 
     <!--==================== SWIPER CSS ====================-->
-    <link rel="stylesheet" href="swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
 
     <!--==================== CSS ====================-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Responsive Portfolio</title>
 
-    <link rel="icon" href="images/u-logo.png" type="image/x-icon">
+    <link rel="icon" href="images/u-logo.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -32,27 +32,27 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#about" class="nav__link">
+                        <a href="about.html" class="nav__link">
                             <i class="uil uil-user nav__icon"></i> About
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#skills" class="nav__link">
+                        <a href="skills.html" class="nav__link">
                             <i class="uil uil-file-alt nav__icon"></i> Skills
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#services" class="nav__link">
+                        <a href="services.html" class="nav__link">
                             <i class="uil uil-briefcase-alt nav__icon"></i> Services
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#portfolio" class="nav__link">
+                        <a href="projects.html" class="nav__link">
                             <i class="uil uil-scenery nav__icon"></i> Projects
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link">
+                        <a href="contact.html" class="nav__link">
                             <i class="uil uil-message nav__icon"></i> Contactme
                         </a>
                     </li>
@@ -137,7 +137,7 @@
             <span class="section__subtitle">My introduction</span>
 
             <div class="about__container container grid">
-                <img src="images/utsobe-img-2.jpeg" alt="" class="about__img">
+                <img src="images/utsobe-img-2.jpeg" alt="" class="about__img" />
 
                 <div class="about__data">
                     <p class="about__description">Mobile & Web Application Developer, with extensive knowledge and highly passionate,
@@ -664,7 +664,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/bmi_calculator.png" alt="" class="portfolio__img">
+                        <img src="images/bmi_calculator.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BMI Calculator</h3>
@@ -685,7 +685,7 @@
                     </div>
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/bookshelf.png" alt="" class="portfolio__img">
+                        <img src="images/bookshelf.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BookShelf</h3>
@@ -711,7 +711,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/quizzler.png" alt="" class="portfolio__img">
+                        <img src="images/quizzler.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Quizzler</h3>
@@ -732,7 +732,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/xylophone.png" alt="" class="portfolio__img">
+                        <img src="images/xylophone.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Xylophone</h3>
@@ -753,7 +753,7 @@
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/destini.png" alt="" class="portfolio__img">
+                        <img src="images/destini.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Destini</h3>
@@ -774,7 +774,7 @@
                     </div>
                     <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-1.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-1.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Native Tools</h3>
@@ -803,7 +803,7 @@
 
                     <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-3.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-3.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Car Ghoor</h3>
@@ -832,7 +832,7 @@
 
                     <!--==================== PORTFOLIO 7 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-2.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-2.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">The Fitness Folk</h3>
@@ -880,7 +880,7 @@
                         </a>
                     </div>
 
-                    <img src="images/project-animy.png" alt="" class="project__img">
+                    <img src="images/project-animy.png" alt="" class="project__img" />
                 </div>
             </div>
         </section>
@@ -1013,16 +1013,16 @@
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input type="text" class="contact__input" />
                         </div>
                         <div class="contact__content">
                             <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <input type="email" class="contact__input" />
                         </div>
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Subject</label>
-                        <input type="text" class="contact__input">
+                        <input type="text" class="contact__input" />
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
@@ -1089,10 +1089,10 @@
 
 
     <!--==================== SWIPER JS ====================-->
-    <script src="swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="swiper-bundle.min.js"></script>
 
     <!--==================== SCRIPT JS ====================-->
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
