html files updated with xhtml format

--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects - Utsobe</title>
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="swiper-bundle.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/u-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+    <link rel="stylesheet" href="swiper-bundle.min.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/u-logo.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -66,7 +66,7 @@
                 <div class="swiper-wrapper">
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/bmi_calculator.png" alt="" class="portfolio__img">
+                        <img src="images/bmi_calculator.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BMI Calculator</h3>
@@ -87,7 +87,7 @@
                     </div>
                     <!--==================== PORTFOLIO 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/bookshelf.png" alt="" class="portfolio__img">
+                        <img src="images/bookshelf.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">BookShelf</h3>
@@ -113,7 +113,7 @@
                     </div>
                     <!--==================== PORTFOLIO 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/quizzler.png" alt="" class="portfolio__img">
+                        <img src="images/quizzler.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Quizzler</h3>
@@ -134,7 +134,7 @@
                     </div>
                     <!--==================== PORTFOLIO 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/xylophone.png" alt="" class="portfolio__img">
+                        <img src="images/xylophone.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Xylophone</h3>
@@ -155,7 +155,7 @@
                     </div>
                     <!--==================== PORTFOLIO 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/destini.png" alt="" class="portfolio__img">
+                        <img src="images/destini.png" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Destini</h3>
@@ -176,7 +176,7 @@
                     </div>
                     <!--==================== PORTFOLIO 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-1.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-1.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Native Tools</h3>
@@ -205,7 +205,7 @@
 
                     <!--==================== PORTFOLIO 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-3.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-3.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Car Ghoor</h3>
@@ -234,7 +234,7 @@
 
                     <!--==================== PORTFOLIO 7 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="images/project-2.jpg" alt="" class="portfolio__img">
+                        <img src="images/project-2.jpg" alt="" class="portfolio__img" />
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">The Fitness Folk</h3>
