--- a/services.html
+++ b/services.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services - Utsobe</title>
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/u-logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="images/u-logo.png" type="image/x-icon" />
 </head>
 <body>
     <header class="header" id="header">
@@ -179,8 +179,8 @@
     </footer>
     <!--==================== SWIPER JS ====================-->
     <script type="text/javascript" src="swiper-bundle.min.js"></script>
-
     <!--==================== SCRIPT JS ====================-->
     <script type="text/javascript" src="script.js"></script>
+    <img src="images/u-logo.png" alt="" style="display:none;" />
 </body>
 </html>
